--- a/TencentLogin/pom.xml
+++ b/TencentLogin/pom.xml
@@ -38,6 +38,11 @@
     	<version>3.1.0</version>
     	<scope>provided</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.alibaba</groupId>
+    	<artifactId>druid</artifactId>
+    	<version>1.0.9</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>TencentLogin</finalName>
